Added the auth/me API
